# Sep490_CareerMate_Python

./: .env.example  .gitignore  CF_EXPLANATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt  test_ml_query.py
Careermate/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
agent_core/: llm.py
agent_core/prompts/: extract_resume_prompts.py  feedback_prompts.py
agent_core/schemas/: __init__.py
apps/cv_analysis_agent/: serializers.py  task.py  urls.py  views.py
apps/cv_analysis_agent/services/: analyzer_service.py  analyzer_service_async.py  extract_text.py  performance_utils.py
apps/recommendation_agent/: views.py
apps/recommendation_agent/models/: jd_skill.py  job_description.py  job_feedback.py
apps/recommendation_agent/services/: recommendation_system.py
apps/roadmap_agent/: serializers.py  views.py
apps/swagger/: __init__.py  apps.py  auth_extensions.py  authentication.py  urls.py
careermate/: authentication.py  middleware.py  settings.py  urls.py
careermate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker_compose/redis_data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
docker_compose/redisinsight_data/: redisinsight.db
docker_compose/redisinsight_data/logs/: .6bd19c9df3732b1bf0cd1db334f34b10fe1e56f4-audit.json  .87bccf485c553f9b743e455b12e7287f192e2f9b-audit.json  redisinsight-2025-10-19.log.0  redisinsight-errors-2025-10-19.log.0
docker_compose/weaviate_data/raft/: raft.db
notebook/: data_update.ipynb  fintune_analysis_resume.ipynb
python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
