[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "annotated-types",
    "anyio",
    "asgiref",
    "authlib",
    "blis",
    "cachetools",
    "catalogue",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "cloudpathlib",
    "colorama",
    "confection",
    "cryptography",
    "cymem",
    "deprecation",
    "distro",
    "django",
    "djangorestframework",
    "drf-yasg",
    "filelock",
    "filetype",
    "fsspec",
    "h11",
    "httpcore",
    "httplib2",
    "httpx",
    "huggingface-hub",
    "idna",
    "inflection",
    "iniconfig",
    "jinja2",
    "jiter",
    "joblib",
    "jsonpatch",
    "jsonpointer",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langchain-weaviate",
    "langcodes",
    "langsmith",
    "language-data",
    "lightning-utilities",
    "marisa-trie",
    "markdown-it-py",
    "markupsafe",
    "mdurl",
    "mpmath",
    "murmurhash",
    "mypy-extensions",
    "networkx",
    "nltk",
    "numpy",
    "openai",
    "orjson",
    "packaging",
    "pandas",
    "pathspec",
    "pillow",
    "platformdirs",
    "pluggy",
    "preshed",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pygments",
    "pyjwt",
    "pyparsing",
    "python-dateutil",
    "python-dotenv",
    "pytokens",
    "pytz",
    "pyyaml",
    "regex",
    "requests",
    "requests-toolbelt",
    "rich",
    "safetensors",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "shellingham",
    "simsimd",
    "six",
    "smart-open",
    "sniffio",
    "spacy",
    "spacy-legacy",
    "spacy-loggers",
    "sqlalchemy",
    "sqlparse",
    "srsly",
    "sympy",
    "tenacity",
    "textblob",
    "thinc",
    "threadpoolctl",
    "tiktoken",
    "tokenizers",
    "torchmetrics",
    "tqdm",
    "transformers",
    "typer",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "urllib3",
    "validators",
    "wasabi",
    "weasel",
    "weaviate-client",
    "wrapt",
    "zstandard",
    "torch",
    "torchvision",
    "torchaudio",
    "jupyter",
    "notebook",
    "datasets>=2.20.0",
    "peft>=0.17.1",
    "sentencepiece>=0.2.1",
    "trl==0.8.6",
    "accelerate>=0.33",
    "langchain-google-genai>=2.0.10",
    "google-genai>=1.43.0",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.10.1",
    "rest_framework",
    "django",
    "Pyjwt",
    "drf-spectacular",
    "drf-spectacular-sidecar",
    "swagger-ui-dist",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]
# Training-related extras (run on Linux/WSL/Colab; many wheels are not available on Windows)
train = [
    "unsloth>=2024.8; platform_system != 'Windows'",
]
# Google/Gemini extras isolated to avoid conflicting pins with training stack
gemini = [
    "langchain-google-genai",
    "google-generativeai",
]
google = [
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-api-core",
    "googleapis-common-protos",
    "grpcio",
    "grpcio-status",
    "proto-plus",
    "protobuf",
    "uritemplate",
]

# Explicit package discovery for flat layout to avoid setuptools error
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_core",
    "agent_core.*",
    "careermate",
    "careermate.*",
    "home",
    "home.*",
    "apps",
    "apps.*",
]
exclude = ["**/tests*", "**/__pycache__*"]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
index-strategy = "unsafe-best-match"
override-dependencies = ["markupsafe==2.1.5"]
