[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "careermate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <=3.13"
dependencies = [
    "django",
    "djangorestframework",
    "huggingface-hub",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langchain-weaviate",
    "langchain-community",
    "langcodes",
    "langsmith",
    "language-data",
    "numpy",
    "openai",
    "pandas",
    "pillow",
    "PyJWT",
    "scikit-learn",
    "sentence-transformers",
    "tokenizers",
#    "torch",
#    "torchvision",
#    "torchaudio",
    "torchmetrics",
    "tqdm",
    "weaviate-client",
    "transformers",
    "jupyter",
    "notebook",
    # swagger/openapi for DRF
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.10.1",
    # Gemini
    "langchain-google-genai",
    "google-generativeai",
    "google-genai",
    "langchain-ollama>=0.3.10",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.5",
    "docx>=0.2.4",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "poppler-utils>=0.1.0",
    "redis>=6.4.0",
    "celery>=5.5.3",
    "traits>=7.0.2",
    "docx2txt>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_core",
    "agent_core.*",
    "careermate",
    "Careermate.*",
    "home",
    "home.*",
    "apps",
    "apps.*",
]
exclude = ["**/tests*", "**/__pycache__*"]
